changes to wwr contrast issues

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -87,6 +87,7 @@ nav a:hover {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
+    background-color: hsla(0, 0%, 0%, 0.3);
 }
 #hero-box{
     grid-column: 1/4;
@@ -202,7 +203,7 @@ main section img{
 }
 
 .msg h2{
-    color: var(--headline-color-on-color);
+    color: #011936;
 }
 
 .msg p {
@@ -283,9 +284,10 @@ footer p a:hover{
 
 #river1 img{
     grid-column: 1/2;
-    width: 100%;
+    width: 90%;
     grid-row: 1/3;
     align-self: center;
+    margin: 0 auto;
 }
 
 #river2{
@@ -311,8 +313,9 @@ footer p a:hover{
 
 #river2 img{
     grid-column: 2/3;
-    width: 100%;
+    width: 90%;
     grid-row: 1/3;
+    margin: 0 auto ;
 }
 
 #river3{
@@ -338,8 +341,9 @@ footer p a:hover{
 
 #river3 img{
     grid-column: 1/2;
-    width: 100%;
+    width: 90%;
     grid-row: 1/3;
+    margin: 0 auto;
 }
 
 
@@ -444,6 +448,7 @@ form {
     }
     #hero-msg {
         margin-top: 0;
+        background-color: unset;
     }
     #hero-msg h4 {
         display: none;
